Added ratings and changed log out button

--- a/Pages/webtech.html
+++ b/Pages/webtech.html
@@ -25,7 +25,9 @@
                                 <ul class="navbar-nav">
 
                                     <li class="nav-item"> 
-                                        <a class="nav-link" href="login.html">Logout</a>
+                                        <a class="nav-link" href="login.html">
+                                        <button type="button" class="btn btn-danger">Log out</button>
+                                        </a>
                                     </li>
 
                                 </ul>
@@ -48,7 +50,7 @@
 							<p class="card-text">Cuisine</p>
 					</div>
 					<div class="col-md-4">
-							<h1><span class="label label-default float-right">3.4</span></h1>
+					  <h1><span class="badge badge-success">3.5</span></h1>
 					</div>
 				</div>
 
