ui fixed for sign in

--- a/Pages/preference.html
+++ b/Pages/preference.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 
     <!-- Main css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
 
