--- a/Pages/restaurant.html
+++ b/Pages/restaurant.html
@@ -19,7 +19,7 @@
           <div class="row">
               <div class="col-md-12">
                   <nav class="navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="main.html"><img src="./logo.png" alt="logo"></a>
+                        <a class="navbar-brand" href="main.html"><img src="images/logo.png" alt="logo"></a>
 
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
@@ -40,7 +40,7 @@
 </div>
 <div class = "main">
   	<div>
-  	  <div class="card col-md-7 col-xl-7"> <img class="card-img-top" src="images/Gone_Maggie_Gone_(318).jpg" alt="Card image cap">
+  	  <div class="card col-md-7 col-xl-7"> <img class="card-img-top" src="images/featured-img1.jpg" alt="Card image cap">
   	    <div class="card-body">
 						<h2 class="card-title">Restauraunt name</h2>
 				<div class = "row">
